--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,5 +3,9 @@ torchvision>=0.15.0
 transformers>=4.20.0
 flask>=2.0.0
 flask-cors>=3.0.0
+flask-socketio>=5.0.0
 scikit-learn>=1.0.0
-numpy>=1.19.0 
+numpy>=1.19.0
+pillow>=8.0.0
+werkzeug>=2.0.0
+pandas>=1.3.0 
