--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
-    "chart.js": "^4.4.8",
+    "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.6",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
