--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,77 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# ---------------------------
+# NODE / REACT (Frontend)
+# ---------------------------
+node_modules/
+build/
+dist/
+.pnp/
 .pnp.js
+coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
 
-# testing
-/coverage
+# ---------------------------
+# PYTHON / FLASK (Backend)
+# ---------------------------
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.log
+*.sqlite3
+*.db
 
-# production
-/build
+# Virtual environments
+venv/
+env/
+.env/
+ENV/
+env.bak/
+venv.bak/
 
-# misc
+# Flask instance folder
+instance/
+
+# ---------------------------
+# MODEL FILES / LARGE FILES
+# ---------------------------
+backend/model_cache/
+*.safetensors
+*.bin
+*.pt
+*.h5
+*.onnx
+*.ckpt
+*.pkl
+*.zip
+*.tar
+*.gz
+*.rar
+
+# ---------------------------
+# IDE / SYSTEM FILES
+# ---------------------------
 .DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+
+# ---------------------------
+# ENVIRONMENT VARIABLES
+# ---------------------------
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# ---------------------------
+# MISC
+# ---------------------------
+*.bak
+*.tmp
+*.old
+*.lock
